--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,15 +3,11 @@
         "./frontend",
         "./backend/wifi_monitor"
     ],
-    "python.testing.unittestArgs": [
-        "-v",
-        "-s",
-        "./tests",
-        "-p",
-        "test_*.py"
+    "python.testing.pytestArgs": [
+        "./tests"  
     ],
-    "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true,
+    "python.testing.pytestEnabled": true,
+    "python.testing.unittestEnabled": false,
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true
 }
