--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: pytest
 
 on:
   push:
@@ -25,6 +25,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f backend/requirements.txt ]; then pip install -r backend/requirements.txt; fi
+        if [ -f frontend/requirements.txt ]; then pip install -r frontend/requirements.txt; fi
+
     - name: Test with pytest
       run: |
         pytest
