--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,3 +4,11 @@ repos:
     hooks:
       - id: pylint
         args: ['--rcfile=.pylintrc']
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.3.0
+    hooks:
+      -   id: check-yaml
+      -   id: end-of-file-fixer
+          exclude: ^out\.txt$
+      -   id: trailing-whitespace
+          exclude: ^out\.txt$
