Add pre-commit hooks check-yaml, end-of-file-fixer and trailing-whitespace

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,6 @@ repos:
     hooks:
       -   id: check-yaml
       -   id: end-of-file-fixer
-          exclude: ^out\.txt$
+          exclude: ^.*oui\.txt$
       -   id: trailing-whitespace
-          exclude: ^out\.txt$
+          exclude: ^.*oui\.txt$
