--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
       "ms-python.python",
       "ms-python.pylint",
-      "ms-python.autopep8"
+      "ms-python.autopep8",
+      "ms-azuretools.vscode-docker"
     ]
 }
