--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,6 +41,9 @@ jobs:
       packages: write
       id-token: write
     if: startsWith(github.ref, 'refs/tags/v')
+    env:
+      DOCKER_BUILDKIT: 1
+      BUILDX_CONTAINERD_IMAGE_STORE: 1
 
     steps:
       - name: Checkout repository
